<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/enter_a_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_number"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:autofillHints="Edit_text"
        android:contentDescription="@string/enter_a_number_description"
        android:hint="@string/enter_a_number_hint"
        android:inputType="number"
        android:labelFor="@id/enter_a_number_label"
        tools:ignore="ContentDescription,LabelFor" />

    <Button
        android:id="@+id/input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>
